[BUGFIX] Menu section collapse arrow styling
The arrow for the section collapse buttons in the
menu used the wrong font.

Introduced in Ia0bb003a9c41e8fa89a87f17e971e16138e1721a.

Releases: master, 1.0
Reviewed-on: https://review.typo3.org/26648
Tested-by: Aske Ertmann
Original-Commit-Hash: 3fbd4bc792287fc60685cbac35664413904d3571

--- a/TYPO3.Neos/Resources/Public/Styles/Neos.css
+++ b/TYPO3.Neos/Resources/Public/Styles/Neos.css
@@ -6962,7 +6962,6 @@
   position: relative;
   top: 0;
   line-height: 40px;
-  font-family: FontAwesome;
 }
 .neos #neos-menu-panel .neos-menu-section .neos-menu-collapse.neos-collapsed::before {
   -webkit-transform: rotate(-90deg);
